gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-fn-items_dg.rs
fn foo(x:fn(&u8, &u8), y: Vec<&u8>, z: &u8) {
  y.push(z);
// { dg-error ".E0596." "" { target *-*-* } .-1 }
// { dg-error ".E0596." "" { target *-*-* } .-2 }
}

fn main() { }

